[package]
name = "rust-pty"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"
opt-level = "z"
debug-assertions = false
strip = true
lto = "fat"
codegen-units = 16
incremental = false


[lib]
crate-type = ["cdylib"]

[dependencies]
# https://github.com/wezterm/wezterm/issues/6783
portable-pty = { version = "0.8.1", features = ["serde_support"] }
lazy_static = "1.4"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1.0"
